--- a/views/user/orderDeatil.ejs
+++ b/views/user/orderDeatil.ejs
@@ -25,10 +25,24 @@
       <h2>Order Details</h2>
       <hr>
       <div class="row order-Details">
-        <div class="col-md-4">
+        <div class="col-12">
+          <% order.items.forEach(item => { %>
+            <img src="/uploads/product/resized/<%= item.productId.productImage[0] %>" style="width: 200px;height: 200px;" alt="<%= item.productId.name %>">
+            <%= item.productId.name %>
+            $<%= item.price %>
+            <%= item.orderStatus %>
+            <% if (item.orderStatus !== 'cancelled') { %>
+              <button class="btn-warnings cancel-product" data-item-id="<%= item._id %>">Cancel Product</button>
+            <% } else { %>
+              <button class="btn-dangers cancel-product" disabled>Cancelled</button>
+            <% } %>
+          <% }) %>
+          
+        </div>
+        <div class="col-md-6">
           <h3>Order Information</h3>
           <p><strong>Order ID:</strong>
-            <%= order.orderId %>
+            <%= order.ordersId %>
           </p>
           <p><strong>Date:</strong>
             <%= order.date.toDateString() %>
@@ -45,17 +59,11 @@
           </p>
           <p><strong>Total:</strong>₹<%= order.totalAmount %>
           </p>
-          <p><strong>Order Status:</strong>
-            <% order.items.forEach(item => { %>
-                <%= item.orderStatus %>
-            <% }); %>
-        </p>
-        
-        
-        
-        
+          
+  
         </div>
-        <div class="col-md-4">
+      
+        <div class="col-md-6">
           <h3>User Information</h3>
           <p><strong>Name:</strong>
             <%= order.deliveryAddress.fullName %>
@@ -63,8 +71,6 @@
           <p><strong>Phone:</strong>
             <%= order.deliveryAddress.mobileNumber %>
           </p>
-        </div>
-        <div class="col-md-4">
           <h3>Address</h3>
           <p><strong>House name:</strong>
             <%= order.deliveryAddress.houseNo %>
@@ -86,7 +92,7 @@
       <br>
       <div class="row">
         <div class="col-md-12">
-            <h3>Items</h3>
+            <h3>Other Items</h3>
             <br>
             <div class="table-responsive">
                 <table class="table">
@@ -95,11 +101,11 @@
                             <th>Image</th>
                             <th>Name</th>
                             <th>Price</th>
-                            <th>Action</th>
+                            <th>Order status</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <% order.items.forEach(item => { %>
+                        <% OtherOrders.forEach(item => { %>
                             <tr>
                                 <td>
                                     <img src="/uploads/product/resized/<%= item.productId.productImage[0] %>"  style="width: 200px;height: 200px;" alt="<%= item.productId.name %>">
@@ -107,12 +113,9 @@
                                 <td><%= item.productId.name %></td>
                                 <td>$<%= item.price %></td>
                                 <td>
-                                    <% if (item.orderStatus !== 'cancelled') { %>
-                                        <button class=" btn-warnings cancel-product" data-item-id="<%= item._id %>">Cancel Product</button>
-                                    <% } else { %>
-                                        <button class=" btn-dangers cancel-product" disabled>Cancelled</button>
-                                    <% } %>
-                                </td>
+                                      <%= item.orderStatus %>
+                              </td>
+                                
                             </tr>
                         <% }); %>
                     </tbody>
