--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -66,7 +66,7 @@
                                     aria-labelledby="tab-one">
                                     <div class="row product-grid-4">
                                         <% for(let i=0; i<products.length; i++) { %>
-                                            <div class="col-lg-4">
+                                            <div class="col-4">
                                                 <div class="product-cart-wrap mb-30">
                                                     <div class="product-img-action-wrap">
                                                         <div class="product-img product-img-zoom">
